--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 2D geometry library for SVG or canvas, written in JavaScript.
 
-The current primary goal is for me to learn the algorithm related to
+The current primary goal is for me to learn the algorithms related to
 2D geometry.
 
 The MIT License
